2010-05-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1433/cpukit
	* block08/bdbuf_tests.c: Enabled tests 1.1, 1.2 and 1.3.
	* block08/bdbuf_test1_1.c, block08/bdbuf_test1_2.c,
	block08/bdbuf_test1_3.c: Use RTEMS_IO_ERROR instead of
	RTEMS_NO_MEMORY.

2010-05-03	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block01/init.c, block02/init.c, block03/init.c, block04/init.c,
	block05/init.c, block06/init.c, block07/init.c, block09/init.c,
	block10/init.c: Changed CONFIGURE_MAXIMUM_SEMAPHORES defines.

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move POSIX in front of other tests.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bspcmdline01/init.c: Fix assert conditional.

2010-04-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/flockfile.c, POSIX/funlockfile.c, POSIX/ftrylockfile.c: New.
	* POSIX/Makefile.am: Add flockfile, funlockfile, ftrylockfile.

2010-02-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block10/.cvsignore: New file.

2010-01-21	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block05/block05.png, block10/block10.doc, block10/init.c,
	block10/.cvsignore, block10/block10.scn, block10/block10.png,
	block10/Makefile.am: New files.
	* configure.ac, Makefile.am: Update for new files.
	* block05/block05.doc: Update for new state transitions.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/.cvsignore, block09/.cvsignore: New files.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/init.c: Remove warning.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* block08/block08.scn, block08/init.c: Add starting and ending messages
	so the scripts detect successful exit.

2010-01-18	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block09/block09.doc, block09/init.c, block09/.cvsignore,
	block09/block09.scn, block09/Makefile.am: New files.
	* configure.ac, Makefile.am: Update for new files.